parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> create
Rule 2     start -> show
Rule 3     start -> drop
Rule 4     start -> select
Rule 5     start -> insert
Rule 6     start -> update
Rule 7     start -> delete
Rule 8     create -> CREATE create_body ENDREQUEST
Rule 9     create_body -> TABLE NAME LBRACKET values RBRACKET
Rule 10    values -> NAME type
Rule 11    values -> values COMMA NAME type
Rule 12    show -> SHOW CREATE TABLE NAME ENDREQUEST
Rule 13    drop -> DROP TABLE NAME ENDREQUEST
Rule 14    select -> SELECT select_body ENDREQUEST
Rule 15    select_body -> fields FROM NAME
Rule 16    select_body -> fields FROM NAME condition
Rule 17    insert -> INSERT insert_body ENDREQUEST
Rule 18    insert_body -> INTO NAME VALUES LBRACKET fields RBRACKET
Rule 19    insert_body -> INTO NAME LBRACKET fields RBRACKET VALUES LBRACKET fields RBRACKET
Rule 20    update -> UPDATE update_body ENDREQUEST
Rule 21    update_body -> NAME SET expression
Rule 22    update_body -> NAME SET expression condition
Rule 23    expression -> field operator field
Rule 24    expression -> expression COMMA field operator field
Rule 25    delete -> DELETE FROM NAME ENDREQUEST
Rule 26    delete -> DELETE FROM NAME condition ENDREQUEST
Rule 27    fields -> NAME
Rule 28    fields -> fields COMMA NAME
Rule 29    field -> NAME
Rule 30    operator -> EQUAL
Rule 31    condition -> WHERE field operator field
Rule 32    type -> int
Rule 33    type -> str
Rule 34    type -> bol
Rule 35    type -> bool

Terminals, with rules where they appear

COMMA                : 11 24 28
CREATE               : 8 12
DELETE               : 25 26
DROP                 : 13
ENDREQUEST           : 8 12 13 14 17 20 25 26
EQUAL                : 30
FROM                 : 15 16 25 26
INSERT               : 17
INTO                 : 18 19
LBRACKET             : 9 18 19 19
NAME                 : 9 10 11 12 13 15 16 18 19 21 22 25 26 27 28 29
RBRACKET             : 9 18 19 19
SELECT               : 14
SET                  : 21 22
SHOW                 : 12
TABLE                : 9 12 13
UPDATE               : 20
VALUES               : 18 19
WHERE                : 31
bol                  : 34
bool                 : 35
error                : 
int                  : 32
str                  : 33

Nonterminals, with rules where they appear

condition            : 16 22 26
create               : 1
create_body          : 8
delete               : 7
drop                 : 3
expression           : 21 22 24
field                : 23 23 24 24 31 31
fields               : 15 16 18 19 19 28
insert               : 5
insert_body          : 17
operator             : 23 24 31
select               : 4
select_body          : 14
show                 : 2
start                : 0
type                 : 10 11
update               : 6
update_body          : 20
values               : 9 11

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . create
    (2) start -> . show
    (3) start -> . drop
    (4) start -> . select
    (5) start -> . insert
    (6) start -> . update
    (7) start -> . delete
    (8) create -> . CREATE create_body ENDREQUEST
    (12) show -> . SHOW CREATE TABLE NAME ENDREQUEST
    (13) drop -> . DROP TABLE NAME ENDREQUEST
    (14) select -> . SELECT select_body ENDREQUEST
    (17) insert -> . INSERT insert_body ENDREQUEST
    (20) update -> . UPDATE update_body ENDREQUEST
    (25) delete -> . DELETE FROM NAME ENDREQUEST
    (26) delete -> . DELETE FROM NAME condition ENDREQUEST

    CREATE          shift and go to state 9
    SHOW            shift and go to state 10
    DROP            shift and go to state 11
    SELECT          shift and go to state 12
    INSERT          shift and go to state 13
    UPDATE          shift and go to state 14
    DELETE          shift and go to state 15

    start                          shift and go to state 1
    create                         shift and go to state 2
    show                           shift and go to state 3
    drop                           shift and go to state 4
    select                         shift and go to state 5
    insert                         shift and go to state 6
    update                         shift and go to state 7
    delete                         shift and go to state 8

state 1

    (0) S' -> start .



state 2

    (1) start -> create .

    $end            reduce using rule 1 (start -> create .)


state 3

    (2) start -> show .

    $end            reduce using rule 2 (start -> show .)


state 4

    (3) start -> drop .

    $end            reduce using rule 3 (start -> drop .)


state 5

    (4) start -> select .

    $end            reduce using rule 4 (start -> select .)


state 6

    (5) start -> insert .

    $end            reduce using rule 5 (start -> insert .)


state 7

    (6) start -> update .

    $end            reduce using rule 6 (start -> update .)


state 8

    (7) start -> delete .

    $end            reduce using rule 7 (start -> delete .)


state 9

    (8) create -> CREATE . create_body ENDREQUEST
    (9) create_body -> . TABLE NAME LBRACKET values RBRACKET

    TABLE           shift and go to state 17

    create_body                    shift and go to state 16

state 10

    (12) show -> SHOW . CREATE TABLE NAME ENDREQUEST

    CREATE          shift and go to state 18


state 11

    (13) drop -> DROP . TABLE NAME ENDREQUEST

    TABLE           shift and go to state 19


state 12

    (14) select -> SELECT . select_body ENDREQUEST
    (15) select_body -> . fields FROM NAME
    (16) select_body -> . fields FROM NAME condition
    (27) fields -> . NAME
    (28) fields -> . fields COMMA NAME

    NAME            shift and go to state 22

    select_body                    shift and go to state 20
    fields                         shift and go to state 21

state 13

    (17) insert -> INSERT . insert_body ENDREQUEST
    (18) insert_body -> . INTO NAME VALUES LBRACKET fields RBRACKET
    (19) insert_body -> . INTO NAME LBRACKET fields RBRACKET VALUES LBRACKET fields RBRACKET

    INTO            shift and go to state 24

    insert_body                    shift and go to state 23

state 14

    (20) update -> UPDATE . update_body ENDREQUEST
    (21) update_body -> . NAME SET expression
    (22) update_body -> . NAME SET expression condition

    NAME            shift and go to state 26

    update_body                    shift and go to state 25

state 15

    (25) delete -> DELETE . FROM NAME ENDREQUEST
    (26) delete -> DELETE . FROM NAME condition ENDREQUEST

    FROM            shift and go to state 27


state 16

    (8) create -> CREATE create_body . ENDREQUEST

    ENDREQUEST      shift and go to state 28


state 17

    (9) create_body -> TABLE . NAME LBRACKET values RBRACKET

    NAME            shift and go to state 29


state 18

    (12) show -> SHOW CREATE . TABLE NAME ENDREQUEST

    TABLE           shift and go to state 30


state 19

    (13) drop -> DROP TABLE . NAME ENDREQUEST

    NAME            shift and go to state 31


state 20

    (14) select -> SELECT select_body . ENDREQUEST

    ENDREQUEST      shift and go to state 32


state 21

    (15) select_body -> fields . FROM NAME
    (16) select_body -> fields . FROM NAME condition
    (28) fields -> fields . COMMA NAME

    FROM            shift and go to state 33
    COMMA           shift and go to state 34


state 22

    (27) fields -> NAME .

    FROM            reduce using rule 27 (fields -> NAME .)
    COMMA           reduce using rule 27 (fields -> NAME .)
    RBRACKET        reduce using rule 27 (fields -> NAME .)


state 23

    (17) insert -> INSERT insert_body . ENDREQUEST

    ENDREQUEST      shift and go to state 35


state 24

    (18) insert_body -> INTO . NAME VALUES LBRACKET fields RBRACKET
    (19) insert_body -> INTO . NAME LBRACKET fields RBRACKET VALUES LBRACKET fields RBRACKET

    NAME            shift and go to state 36


state 25

    (20) update -> UPDATE update_body . ENDREQUEST

    ENDREQUEST      shift and go to state 37


state 26

    (21) update_body -> NAME . SET expression
    (22) update_body -> NAME . SET expression condition

    SET             shift and go to state 38


state 27

    (25) delete -> DELETE FROM . NAME ENDREQUEST
    (26) delete -> DELETE FROM . NAME condition ENDREQUEST

    NAME            shift and go to state 39


state 28

    (8) create -> CREATE create_body ENDREQUEST .

    $end            reduce using rule 8 (create -> CREATE create_body ENDREQUEST .)


state 29

    (9) create_body -> TABLE NAME . LBRACKET values RBRACKET

    LBRACKET        shift and go to state 40


state 30

    (12) show -> SHOW CREATE TABLE . NAME ENDREQUEST

    NAME            shift and go to state 41


state 31

    (13) drop -> DROP TABLE NAME . ENDREQUEST

    ENDREQUEST      shift and go to state 42


state 32

    (14) select -> SELECT select_body ENDREQUEST .

    $end            reduce using rule 14 (select -> SELECT select_body ENDREQUEST .)


state 33

    (15) select_body -> fields FROM . NAME
    (16) select_body -> fields FROM . NAME condition

    NAME            shift and go to state 43


state 34

    (28) fields -> fields COMMA . NAME

    NAME            shift and go to state 44


state 35

    (17) insert -> INSERT insert_body ENDREQUEST .

    $end            reduce using rule 17 (insert -> INSERT insert_body ENDREQUEST .)


state 36

    (18) insert_body -> INTO NAME . VALUES LBRACKET fields RBRACKET
    (19) insert_body -> INTO NAME . LBRACKET fields RBRACKET VALUES LBRACKET fields RBRACKET

    VALUES          shift and go to state 45
    LBRACKET        shift and go to state 46


state 37

    (20) update -> UPDATE update_body ENDREQUEST .

    $end            reduce using rule 20 (update -> UPDATE update_body ENDREQUEST .)


state 38

    (21) update_body -> NAME SET . expression
    (22) update_body -> NAME SET . expression condition
    (23) expression -> . field operator field
    (24) expression -> . expression COMMA field operator field
    (29) field -> . NAME

    NAME            shift and go to state 47

    expression                     shift and go to state 48
    field                          shift and go to state 49

state 39

    (25) delete -> DELETE FROM NAME . ENDREQUEST
    (26) delete -> DELETE FROM NAME . condition ENDREQUEST
    (31) condition -> . WHERE field operator field

    ENDREQUEST      shift and go to state 50
    WHERE           shift and go to state 52

    condition                      shift and go to state 51

state 40

    (9) create_body -> TABLE NAME LBRACKET . values RBRACKET
    (10) values -> . NAME type
    (11) values -> . values COMMA NAME type

    NAME            shift and go to state 53

    values                         shift and go to state 54

state 41

    (12) show -> SHOW CREATE TABLE NAME . ENDREQUEST

    ENDREQUEST      shift and go to state 55


state 42

    (13) drop -> DROP TABLE NAME ENDREQUEST .

    $end            reduce using rule 13 (drop -> DROP TABLE NAME ENDREQUEST .)


state 43

    (15) select_body -> fields FROM NAME .
    (16) select_body -> fields FROM NAME . condition
    (31) condition -> . WHERE field operator field

    ENDREQUEST      reduce using rule 15 (select_body -> fields FROM NAME .)
    WHERE           shift and go to state 52

    condition                      shift and go to state 56

state 44

    (28) fields -> fields COMMA NAME .

    FROM            reduce using rule 28 (fields -> fields COMMA NAME .)
    COMMA           reduce using rule 28 (fields -> fields COMMA NAME .)
    RBRACKET        reduce using rule 28 (fields -> fields COMMA NAME .)


state 45

    (18) insert_body -> INTO NAME VALUES . LBRACKET fields RBRACKET

    LBRACKET        shift and go to state 57


state 46

    (19) insert_body -> INTO NAME LBRACKET . fields RBRACKET VALUES LBRACKET fields RBRACKET
    (27) fields -> . NAME
    (28) fields -> . fields COMMA NAME

    NAME            shift and go to state 22

    fields                         shift and go to state 58

state 47

    (29) field -> NAME .

    EQUAL           reduce using rule 29 (field -> NAME .)
    COMMA           reduce using rule 29 (field -> NAME .)
    WHERE           reduce using rule 29 (field -> NAME .)
    ENDREQUEST      reduce using rule 29 (field -> NAME .)


state 48

    (21) update_body -> NAME SET expression .
    (22) update_body -> NAME SET expression . condition
    (24) expression -> expression . COMMA field operator field
    (31) condition -> . WHERE field operator field

    ENDREQUEST      reduce using rule 21 (update_body -> NAME SET expression .)
    COMMA           shift and go to state 60
    WHERE           shift and go to state 52

    condition                      shift and go to state 59

state 49

    (23) expression -> field . operator field
    (30) operator -> . EQUAL

    EQUAL           shift and go to state 62

    operator                       shift and go to state 61

state 50

    (25) delete -> DELETE FROM NAME ENDREQUEST .

    $end            reduce using rule 25 (delete -> DELETE FROM NAME ENDREQUEST .)


state 51

    (26) delete -> DELETE FROM NAME condition . ENDREQUEST

    ENDREQUEST      shift and go to state 63


state 52

    (31) condition -> WHERE . field operator field
    (29) field -> . NAME

    NAME            shift and go to state 47

    field                          shift and go to state 64

state 53

    (10) values -> NAME . type
    (32) type -> . int
    (33) type -> . str
    (34) type -> . bol
    (35) type -> . bool

    int             shift and go to state 66
    str             shift and go to state 67
    bol             shift and go to state 68
    bool            shift and go to state 69

    type                           shift and go to state 65

state 54

    (9) create_body -> TABLE NAME LBRACKET values . RBRACKET
    (11) values -> values . COMMA NAME type

    RBRACKET        shift and go to state 70
    COMMA           shift and go to state 71


state 55

    (12) show -> SHOW CREATE TABLE NAME ENDREQUEST .

    $end            reduce using rule 12 (show -> SHOW CREATE TABLE NAME ENDREQUEST .)


state 56

    (16) select_body -> fields FROM NAME condition .

    ENDREQUEST      reduce using rule 16 (select_body -> fields FROM NAME condition .)


state 57

    (18) insert_body -> INTO NAME VALUES LBRACKET . fields RBRACKET
    (27) fields -> . NAME
    (28) fields -> . fields COMMA NAME

    NAME            shift and go to state 22

    fields                         shift and go to state 72

state 58

    (19) insert_body -> INTO NAME LBRACKET fields . RBRACKET VALUES LBRACKET fields RBRACKET
    (28) fields -> fields . COMMA NAME

    RBRACKET        shift and go to state 73
    COMMA           shift and go to state 34


state 59

    (22) update_body -> NAME SET expression condition .

    ENDREQUEST      reduce using rule 22 (update_body -> NAME SET expression condition .)


state 60

    (24) expression -> expression COMMA . field operator field
    (29) field -> . NAME

    NAME            shift and go to state 47

    field                          shift and go to state 74

state 61

    (23) expression -> field operator . field
    (29) field -> . NAME

    NAME            shift and go to state 47

    field                          shift and go to state 75

state 62

    (30) operator -> EQUAL .

    NAME            reduce using rule 30 (operator -> EQUAL .)


state 63

    (26) delete -> DELETE FROM NAME condition ENDREQUEST .

    $end            reduce using rule 26 (delete -> DELETE FROM NAME condition ENDREQUEST .)


state 64

    (31) condition -> WHERE field . operator field
    (30) operator -> . EQUAL

    EQUAL           shift and go to state 62

    operator                       shift and go to state 76

state 65

    (10) values -> NAME type .

    RBRACKET        reduce using rule 10 (values -> NAME type .)
    COMMA           reduce using rule 10 (values -> NAME type .)


state 66

    (32) type -> int .

    RBRACKET        reduce using rule 32 (type -> int .)
    COMMA           reduce using rule 32 (type -> int .)


state 67

    (33) type -> str .

    RBRACKET        reduce using rule 33 (type -> str .)
    COMMA           reduce using rule 33 (type -> str .)


state 68

    (34) type -> bol .

    RBRACKET        reduce using rule 34 (type -> bol .)
    COMMA           reduce using rule 34 (type -> bol .)


state 69

    (35) type -> bool .

    RBRACKET        reduce using rule 35 (type -> bool .)
    COMMA           reduce using rule 35 (type -> bool .)


state 70

    (9) create_body -> TABLE NAME LBRACKET values RBRACKET .

    ENDREQUEST      reduce using rule 9 (create_body -> TABLE NAME LBRACKET values RBRACKET .)


state 71

    (11) values -> values COMMA . NAME type

    NAME            shift and go to state 77


state 72

    (18) insert_body -> INTO NAME VALUES LBRACKET fields . RBRACKET
    (28) fields -> fields . COMMA NAME

    RBRACKET        shift and go to state 78
    COMMA           shift and go to state 34


state 73

    (19) insert_body -> INTO NAME LBRACKET fields RBRACKET . VALUES LBRACKET fields RBRACKET

    VALUES          shift and go to state 79


state 74

    (24) expression -> expression COMMA field . operator field
    (30) operator -> . EQUAL

    EQUAL           shift and go to state 62

    operator                       shift and go to state 80

state 75

    (23) expression -> field operator field .

    COMMA           reduce using rule 23 (expression -> field operator field .)
    WHERE           reduce using rule 23 (expression -> field operator field .)
    ENDREQUEST      reduce using rule 23 (expression -> field operator field .)


state 76

    (31) condition -> WHERE field operator . field
    (29) field -> . NAME

    NAME            shift and go to state 47

    field                          shift and go to state 81

state 77

    (11) values -> values COMMA NAME . type
    (32) type -> . int
    (33) type -> . str
    (34) type -> . bol
    (35) type -> . bool

    int             shift and go to state 66
    str             shift and go to state 67
    bol             shift and go to state 68
    bool            shift and go to state 69

    type                           shift and go to state 82

state 78

    (18) insert_body -> INTO NAME VALUES LBRACKET fields RBRACKET .

    ENDREQUEST      reduce using rule 18 (insert_body -> INTO NAME VALUES LBRACKET fields RBRACKET .)


state 79

    (19) insert_body -> INTO NAME LBRACKET fields RBRACKET VALUES . LBRACKET fields RBRACKET

    LBRACKET        shift and go to state 83


state 80

    (24) expression -> expression COMMA field operator . field
    (29) field -> . NAME

    NAME            shift and go to state 47

    field                          shift and go to state 84

state 81

    (31) condition -> WHERE field operator field .

    ENDREQUEST      reduce using rule 31 (condition -> WHERE field operator field .)


state 82

    (11) values -> values COMMA NAME type .

    RBRACKET        reduce using rule 11 (values -> values COMMA NAME type .)
    COMMA           reduce using rule 11 (values -> values COMMA NAME type .)


state 83

    (19) insert_body -> INTO NAME LBRACKET fields RBRACKET VALUES LBRACKET . fields RBRACKET
    (27) fields -> . NAME
    (28) fields -> . fields COMMA NAME

    NAME            shift and go to state 22

    fields                         shift and go to state 85

state 84

    (24) expression -> expression COMMA field operator field .

    COMMA           reduce using rule 24 (expression -> expression COMMA field operator field .)
    WHERE           reduce using rule 24 (expression -> expression COMMA field operator field .)
    ENDREQUEST      reduce using rule 24 (expression -> expression COMMA field operator field .)


state 85

    (19) insert_body -> INTO NAME LBRACKET fields RBRACKET VALUES LBRACKET fields . RBRACKET
    (28) fields -> fields . COMMA NAME

    RBRACKET        shift and go to state 86
    COMMA           shift and go to state 34


state 86

    (19) insert_body -> INTO NAME LBRACKET fields RBRACKET VALUES LBRACKET fields RBRACKET .

    ENDREQUEST      reduce using rule 19 (insert_body -> INTO NAME LBRACKET fields RBRACKET VALUES LBRACKET fields RBRACKET .)

